log/build_2025-08-08_23-20-44/temperature_system/stderr.log
  File "/home/henrique/ros2_ws/install/temperature_system/lib/python3.12/site-packages/temperature_system/advanced_monitor_node.py", line 80
    else if temperature >> self.critical_temperature_threshold:
         ^^
SyntaxError: expected ':'

